deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evorsio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evorsio
  template:
    metadata:
      labels:
        app: evorsio
    spec:
      containers:
        - name: evorsio
          image: ghcr.io/newstatue/evorsio:v0.0.1
          ports:
            - containerPort: 8080
