deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evorsio
spec:
  selector:
    app: evorsio
  ports:
    - port: 80
      targetPort: 8080
