deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evorsio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - evorsio.com
      secretName: evorsio-tls
  rules:
    - host: evorsio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evorsio
                port:
                  number: 80
